# tda

./: .gitignore  README.md  barcode.py  flake.nix  gen_data.py  main.ipynb  other.ipynb  pyproject.toml  reference.ipynb
